fix: made scrollbar visible

--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,7 @@ html{
     scroll-behavior: smooth;
 }
   
-::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-    /* Remove scrollbar space */
-    background: transparent;
-    /* Optional: just make scrollbar invisible */
-}
+
   
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
